# rust_text_engine

./: Cargo.toml  readme.md
example/: init.yaml
example/scenes/: start.yaml
src/: capture.rs  character.rs  character_style.rs  common.rs  compiled.rs  condition.rs  executable.rs  file_format.rs  initializer.rs  main.rs  path_reference.rs  refer.rs  section.rs  show_input.rs  switcher.rs  text_input.rs  traits.rs  ui.rs  ui_messenger.rs
