[package]
name = "rust_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.25.0", features = ["serde"] }
relative-path = { version = "1.7.2", features = ["serde"] }
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
serde_yaml = "0.9.4"
evalexpr = "8.1.0"
snailshell = "0.3.1"
regex = "1.6.0"
lazy_static = "1.4.0"
figlet-rs = "0.1.3"
image = "0.24.3"
cursive = { version = "0.19.0", default-features = false, features = ["crossterm-backend"] }
cursive-aligned-view = "0.6.0"
